crates/gridwell-writer-ansi/tests/snapshots/snapshots__unicode-cjk.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
[1m販売実績[0m
┌────────────┬────────────┐
│[1m 地域       [0m│[1m 売上       [0m│
├────────────┼────────────┤
│ 東京       │ 1,250      │
│ 大阪       │ 980        │
└────────────┴────────────┘
