crates/gridwell-writer-ansi/tests/snapshots/snapshots__unicode-rtl.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m الاسم       [0m│[1m القيمة     [0m│
├────────────┼────────────┤
│ مرحبا      │ ١٢٣        │
│ שלום       │ 456        │
└────────────┴────────────┘
