crates/gridwell-writer-ansi/tests/snapshots/snapshots__wide-50-cols.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬────────────┐
│[1m c0         [0m│[1m c1         [0m│[1m c2         [0m│[1m c3         [0m│[1m c4         [0m│[1m c5         [0m│[1m c6         [0m│[1m c7         [0m│[1m c8         [0m│[1m c9         [0m│[1m c10        [0m│[1m c11        [0m│[1m c12        [0m│[1m c13        [0m│[1m c14        [0m│[1m c15        [0m│[1m c16        [0m│[1m c17        [0m│[1m c18        [0m│[1m c19        [0m│[1m c20        [0m│[1m c21        [0m│[1m c22        [0m│[1m c23        [0m│[1m c24        [0m│[1m c25        [0m│[1m c26        [0m│[1m c27        [0m│[1m c28        [0m│[1m c29        [0m│[1m c30        [0m│[1m c31        [0m│[1m c32        [0m│[1m c33        [0m│[1m c34        [0m│[1m c35        [0m│[1m c36        [0m│[1m c37        [0m│[1m c38        [0m│[1m c39        [0m│[1m c40        [0m│[1m c41        [0m│[1m c42        [0m│[1m c43        [0m│[1m c44        [0m│[1m c45        [0m│[1m c46        [0m│[1m c47        [0m│[1m c48        [0m│[1m c49        [0m│
├────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┼────────────┤
│ 0          │ 1          │ 2          │ 3          │ 4          │ 5          │ 6          │ 7          │ 8          │ 9          │ 10         │ 11         │ 12         │ 13         │ 14         │ 15         │ 16         │ 17         │ 18         │ 19         │ 20         │ 21         │ 22         │ 23         │ 24         │ 25         │ 26         │ 27         │ 28         │ 29         │ 30         │ 31         │ 32         │ 33         │ 34         │ 35         │ 36         │ 37         │ 38         │ 39         │ 40         │ 41         │ 42         │ 43         │ 44         │ 45         │ 46         │ 47         │ 48         │ 49         │
│ 100        │ 101        │ 102        │ 103        │ 104        │ 105        │ 106        │ 107        │ 108        │ 109        │ 110        │ 111        │ 112        │ 113        │ 114        │ 115        │ 116        │ 117        │ 118        │ 119        │ 120        │ 121        │ 122        │ 123        │ 124        │ 125        │ 126        │ 127        │ 128        │ 129        │ 130        │ 131        │ 132        │ 133        │ 134        │ 135        │ 136        │ 137        │ 138        │ 139        │ 140        │ 141        │ 142        │ 143        │ 144        │ 145        │ 146        │ 147        │ 148        │ 149        │
│ 200        │ 201        │ 202        │ 203        │ 204        │ 205        │ 206        │ 207        │ 208        │ 209        │ 210        │ 211        │ 212        │ 213        │ 214        │ 215        │ 216        │ 217        │ 218        │ 219        │ 220        │ 221        │ 222        │ 223        │ 224        │ 225        │ 226        │ 227        │ 228        │ 229        │ 230        │ 231        │ 232        │ 233        │ 234        │ 235        │ 236        │ 237        │ 238        │ 239        │ 240        │ 241        │ 242        │ 243        │ 244        │ 245        │ 246        │ 247        │ 248        │ 249        │
└────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴────────────┘
